<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_film"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/filmBanner"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/content_description_film"
                        android:src="@drawable/ic_launcher_foreground" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="8dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="2dp"
                                    android:contentDescription="@string/content_description_film"
                                    android:src="@drawable/icon_cam" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    android:text="@string/label_movie_category" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="2dp"
                                    android:contentDescription="@string/content_description_film"
                                    android:src="@drawable/icon_clock" />

                                <TextView
                                    android:id="@+id/movie_detail_duration"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    tools:text="duration" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="8dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="2dp"
                                    android:contentDescription="@string/content_description_film"
                                    android:src="@drawable/icon_star" />

                                <TextView
                                    android:id="@+id/movie_detail_rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    tools:text="rating" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/filmName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Spirited Away" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/filmDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="lorem ipsum amed dollor" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filmDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_director"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filmProducer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_producer"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filmYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/label_year"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>